# data_challange

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  questions.md  requirements.txt
analytics_case_study/app/: main.py
analytics_case_study/app/pages/: avg_days_to_first_order.py  avg_views_per_device.py  ctr.py  mom_growth_rate.py  never_ordered.py  section1.py  section2.py  section3.py  section3_exploration.py  section3_practical.py  section3_processing.py  top_products.py
analytics_case_study/app/scripts/: kfold.py  outliers.py  stochastic_regression.py
analytics_case_study/app/scripts/section2/: process.py
analytics_case_study/app/scripts/section3/: imputation.py  load_data.py  merge_and_prepare.py  outlier_handling.py  section3_processing.py
analytics_case_study/app/utils/: db.py  theme.py
analytics_case_study/queries/: raw_sql.py  run_queries.py
